--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <script>
         let processes = [];
         let processCounter = 1;
+        let algorithmSelected = false; // Validation
         const processColors = {}; // Store consistent colors for processes
         const highContrastColors = ['#e6194b', '#3cb44b', '#ffe119', '#4363d8', '#f58231', '#911eb4', '#46f0f0', '#f032e6', '#bcf60c'];
 
@@ -151,8 +152,8 @@
                 alert("Tolong masukan Arrival Time yang benar (0 atau lebih besar dari 0).");
                 return; // Prevent further execution
             }
-            if (burstTime === null || burstTime === undefined || burstTime === "" || isNaN(parseInt(burstTime)) || parseInt(burstTime) < 0) {
-                alert("Tolong masukan Burst Time yang benar (0 atau lebih besar dari 0).");
+            if (burstTime === null || burstTime === undefined || burstTime === "" || isNaN(parseInt(burstTime)) || parseInt(burstTime) < 1) {
+                alert("Tolong masukan Burst Time yang benar (1 atau lebih besar dari 1).");
                 return; // Prevent further execution
             }
             if (parseInt(priority) < 0) {
@@ -195,6 +196,12 @@
         }
 
         function runRoundRobin() {
+            if (algorithmSelected) {
+                alert("Tekan tombol reset sebelum mensimulasikan algoritma penjadwalan lagi.");
+                return; // Prevent further execution
+            }
+            algorithmSelected = true; // Set the flag to true after selection
+
             const quantum = parseInt(document.getElementById('quantum-time').value);
             if (!isNaN(quantum) && quantum > 0) {
                 document.getElementById('quantum-input-section').classList.add('hidden');
@@ -267,6 +274,12 @@
 
 
         function simulate(type) {
+            if (algorithmSelected) {
+                alert("Tekan tombol reset sebelum mensimulasikan algoritma penjadwalan lagi.");
+                return; // Prevent further execution
+            }
+            algorithmSelected = true; // Set the flag to true after selection
+
             if (type === 'priority') {
                 // Clone the processes array to add a new property for tracking remaining burst time
                 processes.forEach(process => {
@@ -394,6 +407,7 @@
         function resetSimulator() {
             processes = [];
             processCounter = 1;
+            algorithmSelected = false; // Reset the flag
             document.getElementById('process-form').reset();
             document.getElementById('process-table-body').innerHTML = '';
             document.getElementById('results').innerHTML = '';
